Fase 2/proyectoParser.py
# Generated from proyecto.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class proyectoParser ( Parser ):

    grammarFileName = "proyecto.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Charmander'", "'Totodile'", "'Wooper'", 
                     "'Pikachu'", "'Corviknight'", "'Ratata'", "'Paras'", 
                     "'Clefable'", "'Tentacool'", "'Seel'", "'Dragonite'", 
                     "'While'", "'Cresselia'", "'Mewtwo'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'='", "'!'", "'<'", "'>'", 
                     "'+'", "'-'", "'/'", "'*'", "'('", "')'", "','" ]

    symbolicNames = [ "<INVALID>", "CHARMANDER", "TOTODILE", "WOOPER", "PIKACHU", 
                      "CORVIKNIGHT", "RATATA", "PARAS", "CLEFABLE", "TENTACOOL", 
                      "SEEL", "DRAGONITE", "NECROZMA", "CRESSELIA", "MEWTWO", 
                      "UNOWN", "INT", "ID", "FLOAT", "STRING", "BOOL", "WS", 
                      "EQUAL", "EXC", "MINOR", "BIGGER", "PLUS", "MINUS", 
                      "DIV", "MUL", "OPA", "CLPA", "COMA" ]

    RULE_start = 0
    RULE_line = 1
    RULE_var = 2
    RULE_condi = 3
    RULE_elif = 4
    RULE_else = 5
    RULE_exp = 6
    RULE_cond = 7
    RULE_condv = 8
    RULE_act = 9
    RULE_arith = 10
    RULE_xerneas = 11
    RULE_uxie = 12
    RULE_func = 13
    RULE_extraf = 14
    RULE_extrac = 15
    RULE_atr = 16
    RULE_atrl = 17
    RULE_data = 18

    ruleNames =  [ "start", "line", "var", "condi", "elif", "else", "exp", 
                   "cond", "condv", "act", "arith", "xerneas", "uxie", "func", 
                   "extraf", "extrac", "atr", "atrl", "data" ]

    EOF = Token.EOF
    CHARMANDER=1
    TOTODILE=2
    WOOPER=3
    PIKACHU=4
    CORVIKNIGHT=5
    RATATA=6
    PARAS=7
    CLEFABLE=8
    TENTACOOL=9
    SEEL=10
    DRAGONITE=11
    NECROZMA=12
    CRESSELIA=13
    MEWTWO=14
    UNOWN=15
    INT=16
    ID=17
    FLOAT=18
    STRING=19
    BOOL=20
    WS=21
    EQUAL=22
    EXC=23
    MINOR=24
    BIGGER=25
    PLUS=26
    MINUS=27
    DIV=28
    MUL=29
    OPA=30
    CLPA=31
    COMA=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line(self):
            return self.getTypedRuleContext(proyectoParser.LineContext,0)


        def getRuleIndex(self):
            return proyectoParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = proyectoParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.line()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(proyectoParser.VarContext,0)


        def condi(self):
            return self.getTypedRuleContext(proyectoParser.CondiContext,0)


        def arith(self):
            return self.getTypedRuleContext(proyectoParser.ArithContext,0)


        def func(self):
            return self.getTypedRuleContext(proyectoParser.FuncContext,0)


        def data(self):
            return self.getTypedRuleContext(proyectoParser.DataContext,0)


        def UNOWN(self):
            return self.getToken(proyectoParser.UNOWN, 0)

        def CHARMANDER(self):
            return self.getToken(proyectoParser.CHARMANDER, 0)

        def getRuleIndex(self):
            return proyectoParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = proyectoParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        try:
            self.state = 50
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.var()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.condi()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 42
                self.arith()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 43
                self.func()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 44
                self.data()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 46
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 45
                    self.match(proyectoParser.UNOWN)


                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 48
                self.match(proyectoParser.CHARMANDER)
                self.state = 49
                self.match(proyectoParser.UNOWN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOTODILE(self):
            return self.getToken(proyectoParser.TOTODILE, 0)

        def ID(self):
            return self.getToken(proyectoParser.ID, 0)

        def EQUAL(self):
            return self.getToken(proyectoParser.EQUAL, 0)

        def INT(self):
            return self.getToken(proyectoParser.INT, 0)

        def line(self):
            return self.getTypedRuleContext(proyectoParser.LineContext,0)


        def UNOWN(self):
            return self.getToken(proyectoParser.UNOWN, 0)

        def arith(self):
            return self.getTypedRuleContext(proyectoParser.ArithContext,0)


        def WOOPER(self):
            return self.getToken(proyectoParser.WOOPER, 0)

        def FLOAT(self):
            return self.getToken(proyectoParser.FLOAT, 0)

        def PIKACHU(self):
            return self.getToken(proyectoParser.PIKACHU, 0)

        def BOOL(self):
            return self.getToken(proyectoParser.BOOL, 0)

        def CORVIKNIGHT(self):
            return self.getToken(proyectoParser.CORVIKNIGHT, 0)

        def STRING(self):
            return self.getToken(proyectoParser.STRING, 0)

        def getRuleIndex(self):
            return proyectoParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = proyectoParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var)
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.match(proyectoParser.TOTODILE)
                self.state = 53
                self.match(proyectoParser.ID)
                self.state = 54
                self.match(proyectoParser.EQUAL)
                self.state = 55
                self.match(proyectoParser.INT)
                self.state = 57
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 56
                    self.match(proyectoParser.UNOWN)


                self.state = 59
                self.line()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.match(proyectoParser.TOTODILE)
                self.state = 61
                self.match(proyectoParser.ID)
                self.state = 62
                self.match(proyectoParser.EQUAL)
                self.state = 63
                self.arith()
                self.state = 65
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 64
                    self.match(proyectoParser.UNOWN)


                self.state = 67
                self.line()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.match(proyectoParser.WOOPER)
                self.state = 70
                self.match(proyectoParser.ID)
                self.state = 71
                self.match(proyectoParser.EQUAL)
                self.state = 72
                self.match(proyectoParser.FLOAT)
                self.state = 73
                self.match(proyectoParser.UNOWN)
                self.state = 74
                self.line()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 75
                self.match(proyectoParser.PIKACHU)
                self.state = 76
                self.match(proyectoParser.ID)
                self.state = 77
                self.match(proyectoParser.EQUAL)
                self.state = 78
                self.match(proyectoParser.BOOL)
                self.state = 79
                self.match(proyectoParser.UNOWN)
                self.state = 80
                self.line()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 81
                self.match(proyectoParser.CORVIKNIGHT)
                self.state = 82
                self.match(proyectoParser.ID)
                self.state = 83
                self.match(proyectoParser.EQUAL)
                self.state = 84
                self.match(proyectoParser.STRING)
                self.state = 85
                self.match(proyectoParser.UNOWN)
                self.state = 86
                self.line()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RATATA(self):
            return self.getToken(proyectoParser.RATATA, 0)

        def exp(self):
            return self.getTypedRuleContext(proyectoParser.ExpContext,0)


        def act(self):
            return self.getTypedRuleContext(proyectoParser.ActContext,0)


        def CRESSELIA(self):
            return self.getToken(proyectoParser.CRESSELIA, 0)

        def line(self):
            return self.getTypedRuleContext(proyectoParser.LineContext,0)


        def UNOWN(self, i:int=None):
            if i is None:
                return self.getTokens(proyectoParser.UNOWN)
            else:
                return self.getToken(proyectoParser.UNOWN, i)

        def elif_(self):
            return self.getTypedRuleContext(proyectoParser.ElifContext,0)


        def else_(self):
            return self.getTypedRuleContext(proyectoParser.ElseContext,0)


        def NECROZMA(self):
            return self.getToken(proyectoParser.NECROZMA, 0)

        def getRuleIndex(self):
            return proyectoParser.RULE_condi

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondi" ):
                listener.enterCondi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondi" ):
                listener.exitCondi(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondi" ):
                return visitor.visitCondi(self)
            else:
                return visitor.visitChildren(self)




    def condi(self):

        localctx = proyectoParser.CondiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_condi)
        self._la = 0 # Token type
        try:
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.match(proyectoParser.RATATA)
                self.state = 90
                self.exp()
                self.state = 91
                self.act()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==15:
                    self.state = 92
                    self.match(proyectoParser.UNOWN)


                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==7:
                    self.state = 95
                    self.elif_()


                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==8:
                    self.state = 98
                    self.else_()


                self.state = 101
                self.match(proyectoParser.CRESSELIA)
                self.state = 103
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 102
                    self.match(proyectoParser.UNOWN)


                self.state = 105
                self.line()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(proyectoParser.NECROZMA)
                self.state = 108
                self.exp()
                self.state = 109
                self.act()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==15:
                    self.state = 110
                    self.match(proyectoParser.UNOWN)


                self.state = 113
                self.match(proyectoParser.CRESSELIA)
                self.state = 115
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 114
                    self.match(proyectoParser.UNOWN)


                self.state = 117
                self.line()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElifContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAS(self, i:int=None):
            if i is None:
                return self.getTokens(proyectoParser.PARAS)
            else:
                return self.getToken(proyectoParser.PARAS, i)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(proyectoParser.ExpContext)
            else:
                return self.getTypedRuleContext(proyectoParser.ExpContext,i)


        def act(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(proyectoParser.ActContext)
            else:
                return self.getTypedRuleContext(proyectoParser.ActContext,i)


        def UNOWN(self, i:int=None):
            if i is None:
                return self.getTokens(proyectoParser.UNOWN)
            else:
                return self.getToken(proyectoParser.UNOWN, i)

        def getRuleIndex(self):
            return proyectoParser.RULE_elif

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElif" ):
                listener.enterElif(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElif" ):
                listener.exitElif(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElif" ):
                return visitor.visitElif(self)
            else:
                return visitor.visitChildren(self)




    def elif_(self):

        localctx = proyectoParser.ElifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_elif)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 121
                self.match(proyectoParser.PARAS)
                self.state = 122
                self.exp()
                self.state = 123
                self.act()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==15:
                    self.state = 124
                    self.match(proyectoParser.UNOWN)


                self.state = 129 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==7):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLEFABLE(self):
            return self.getToken(proyectoParser.CLEFABLE, 0)

        def act(self):
            return self.getTypedRuleContext(proyectoParser.ActContext,0)


        def getRuleIndex(self):
            return proyectoParser.RULE_else

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse" ):
                listener.enterElse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse" ):
                listener.exitElse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElse" ):
                return visitor.visitElse(self)
            else:
                return visitor.visitChildren(self)




    def else_(self):

        localctx = proyectoParser.ElseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_else)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(proyectoParser.CLEFABLE)
            self.state = 132
            self.act()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(proyectoParser.ID)
            else:
                return self.getToken(proyectoParser.ID, i)

        def cond(self):
            return self.getTypedRuleContext(proyectoParser.CondContext,0)


        def INT(self):
            return self.getToken(proyectoParser.INT, 0)

        def FLOAT(self):
            return self.getToken(proyectoParser.FLOAT, 0)

        def condv(self):
            return self.getTypedRuleContext(proyectoParser.CondvContext,0)


        def BOOL(self):
            return self.getToken(proyectoParser.BOOL, 0)

        def STRING(self):
            return self.getToken(proyectoParser.STRING, 0)

        def getRuleIndex(self):
            return proyectoParser.RULE_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp" ):
                listener.enterExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp" ):
                listener.exitExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)




    def exp(self):

        localctx = proyectoParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_exp)
        self._la = 0 # Token type
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.match(proyectoParser.ID)
                self.state = 135
                self.cond()
                self.state = 136
                _la = self._input.LA(1)
                if not(_la==16 or _la==17):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.match(proyectoParser.ID)
                self.state = 139
                self.cond()
                self.state = 140
                _la = self._input.LA(1)
                if not(_la==17 or _la==18):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 142
                self.match(proyectoParser.ID)
                self.state = 143
                self.condv()
                self.state = 144
                _la = self._input.LA(1)
                if not(_la==17 or _la==20):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 146
                self.match(proyectoParser.ID)
                self.state = 147
                self.cond()
                self.state = 148
                _la = self._input.LA(1)
                if not(_la==17 or _la==19):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUAL(self):
            return self.getToken(proyectoParser.EQUAL, 0)

        def EXC(self):
            return self.getToken(proyectoParser.EXC, 0)

        def MINOR(self):
            return self.getToken(proyectoParser.MINOR, 0)

        def BIGGER(self):
            return self.getToken(proyectoParser.BIGGER, 0)

        def getRuleIndex(self):
            return proyectoParser.RULE_cond

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond" ):
                listener.enterCond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond" ):
                listener.exitCond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond" ):
                return visitor.visitCond(self)
            else:
                return visitor.visitChildren(self)




    def cond(self):

        localctx = proyectoParser.CondContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_cond)
        try:
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.match(proyectoParser.EQUAL)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.match(proyectoParser.EXC)
                self.state = 154
                self.match(proyectoParser.EQUAL)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 155
                self.match(proyectoParser.MINOR)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 156
                self.match(proyectoParser.BIGGER)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 157
                self.match(proyectoParser.MINOR)
                self.state = 158
                self.match(proyectoParser.EQUAL)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 159
                self.match(proyectoParser.BIGGER)
                self.state = 160
                self.match(proyectoParser.EQUAL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondvContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXC(self):
            return self.getToken(proyectoParser.EXC, 0)

        def EQUAL(self):
            return self.getToken(proyectoParser.EQUAL, 0)

        def getRuleIndex(self):
            return proyectoParser.RULE_condv

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondv" ):
                listener.enterCondv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondv" ):
                listener.exitCondv(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondv" ):
                return visitor.visitCondv(self)
            else:
                return visitor.visitChildren(self)




    def condv(self):

        localctx = proyectoParser.CondvContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_condv)
        try:
            self.state = 166
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.match(proyectoParser.EXC)
                self.state = 164
                self.match(proyectoParser.EQUAL)
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.match(proyectoParser.EQUAL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line(self):
            return self.getTypedRuleContext(proyectoParser.LineContext,0)


        def UNOWN(self):
            return self.getToken(proyectoParser.UNOWN, 0)

        def getRuleIndex(self):
            return proyectoParser.RULE_act

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAct" ):
                listener.enterAct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAct" ):
                listener.exitAct(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAct" ):
                return visitor.visitAct(self)
            else:
                return visitor.visitChildren(self)




    def act(self):

        localctx = proyectoParser.ActContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_act)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.state = 168
                self.match(proyectoParser.UNOWN)


            self.state = 171
            self.line()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def xerneas(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(proyectoParser.XerneasContext)
            else:
                return self.getTypedRuleContext(proyectoParser.XerneasContext,i)


        def line(self):
            return self.getTypedRuleContext(proyectoParser.LineContext,0)


        def ID(self):
            return self.getToken(proyectoParser.ID, 0)

        def EQUAL(self):
            return self.getToken(proyectoParser.EQUAL, 0)

        def UNOWN(self):
            return self.getToken(proyectoParser.UNOWN, 0)

        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(proyectoParser.PLUS)
            else:
                return self.getToken(proyectoParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(proyectoParser.MINUS)
            else:
                return self.getToken(proyectoParser.MINUS, i)

        def getRuleIndex(self):
            return proyectoParser.RULE_arith

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArith" ):
                listener.enterArith(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArith" ):
                listener.exitArith(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArith" ):
                return visitor.visitArith(self)
            else:
                return visitor.visitChildren(self)




    def arith(self):

        localctx = proyectoParser.ArithContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arith)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.state = 173
                self.match(proyectoParser.ID)
                self.state = 174
                self.match(proyectoParser.EQUAL)


            self.state = 177
            self.xerneas()
            self.state = 182
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==26 or _la==27:
                self.state = 178
                _la = self._input.LA(1)
                if not(_la==26 or _la==27):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 179
                self.xerneas()
                self.state = 184
                self._errHandler.sync(self)
                _la = self._input.LA(1)
